version '1.0-SNAPSHOT'

apply plugin: 'java'

sourceCompatibility = 1.8

jar {
    archiveName = "jasserver.jar"

    from {
        configurations.runtime.collect {
            it.isDirectory() ? it : zipTree(it)
        }

        configurations.compile.collect {
            it.isDirectory() ? it : zipTree(it)
        }
    }

    manifest {
        attributes 'Main-Class': "server.Main"
    }
}

repositories {
    mavenCentral()
}

dependencies {

    compile 'com.google.firebase:firebase-server-sdk:3.0.1'
    compile group: 'com.mashape.unirest', name: 'unirest-java', version: '1.4.9'
    compile 'com.sparkjava:spark-core:2.5'
    compile 'redis.clients:jedis:2.9.0'
    compile 'com.google.code.gson:gson:2.8.0'
    compile 'ch.qos.logback:logback-classic:1.1.7'
    compile group: 'org.slf4j', name: 'slf4j-api', version: '1.6.1'
    compile 'ch.qos.logback:logback-classic:1.1.7'

    testCompile group: 'junit', name: 'junit', version: '4.11'
}
